--- a/index.html
+++ b/index.html
@@ -278,8 +278,8 @@
                             <img src="assets/img/Untitled.3.png" alt="projects image" class="projects__img">
 
                             <div>
-                                <span class="projects__subtitle">web</span>
-                                <h1 class="projects__title">Website</h1>
+                                <span class="projects__subtitle">Front-End</span>
+                                <h1 class="projects__title">React Calculator</h1>
 
                                 <a href="https://react-calculator-by-sahil-panigrahi.vercel.app/" target="_blank" class="projects__button">
                                     View demo <i class="ri-arrow-right-line"></i>
@@ -296,8 +296,8 @@
                             <img src="assets/img/Untitled.4.png" alt="projects image" class="projects__img">
 
                             <div>
-                                <span class="projects__subtitle">web</span>
-                                <h1 class="projects__title">Website</h1>
+                                <span class="projects__subtitle">Front-End</span>
+                                <h1 class="projects__title">Wordscramble Game</h1>
 
                                 <a href="https://word-scramble-game-by-sahil.netlify.app/" target="_blank" class="projects__button">
                                     View demo <i class="ri-arrow-right-line"></i>
@@ -314,8 +314,8 @@
                             <img src="assets/img/Untitled.5.png" alt="projects image" class="projects__img">
 
                             <div>
-                                <span class="projects__subtitle">web</span>
-                                <h1 class="projects__title">Website</h1>
+                                <span class="projects__subtitle">Front-End</span>
+                                <h1 class="projects__title">Portfolio Website</h1>
 
                                 <a href="https://portfolio-website-by-sahil-panigrahi.netlify.app/" target="_blank" class="projects__button">
                                     View demo <i class="ri-arrow-right-line"></i>
@@ -331,8 +331,8 @@
                         <div class="projects__content swiper-slide">
                             <img src="assets/img/Untitled.6.png" alt="projects image" class="projects__img">
                             <div>
-                                <span class="projects__subtitle">web</span>
-                                <h1 class="projects__title">Website</h1>
+                                <span class="projects__subtitle">Front-End</span>
+                                <h1 class="projects__title">Countdown Timer</h1>
                                 
                                 <a href="https://sahilpanigrahi.github.io/countdown-timer/" target="_blank" class="projects__button">
                                     View demo <i class="ri-arrow-right-line"></i>
