--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                     <div class="swiper-wrapper">
                         <!--==================== PROJECT 1 ====================-->
                         <div class="projects__content swiper-slide">
-                            <img src="assets/img/Unti" alt="projects image" class="projects__img">
+                            <img src="assets/img/c.png" alt="projects image" class="projects__img">
 
                             <div>
                                 <span class="projects__subtitle">Front-End</span>
@@ -320,7 +320,7 @@
 
                         <!--==================== PROJECT 3 ====================-->
                         <div class="projects__content swiper-slide">
-                            <img src="assets/img/Untit" alt="projects image" class="projects__img">
+                            <img src="assets/img/a.png" alt="projects image" class="projects__img">
 
                             <div>
                                 <span class="projects__subtitle">Front-End</span>
@@ -374,7 +374,7 @@
 
                         <!--==================== PROJECT 6 ====================-->
                         <div class="projects__content swiper-slide">
-                            <img src="assets/img/Untit" alt="projects image" class="projects__img">
+                            <img src="assets/img/b.png" alt="projects image" class="projects__img">
 
                             <div>
                                 <span class="projects__subtitle">Front-End</span>
