--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="keywords" content="HTML, CSS, JavaScript">
+        <meta name="description" content="Sahil Panigrahi's Portfolio Website">
+        <meta name="author" content="Sahil Panigrahi">
+
 
         <link rel="shortcut icon" href="assets/img/project.png" type="image/x-icon">
 
@@ -373,7 +377,7 @@
                         </div>
 
                         <!--==================== PROJECT 6 ====================-->
-                        <div class="projects__content swiper-slide">
+<!--                         <div class="projects__content swiper-slide">
                             <img src="assets/img/b.png" alt="projects image" class="projects__img">
 
                             <div>
@@ -388,7 +392,7 @@
                                     View code <i class="ri-arrow-right-line"></i>
                                 </a>
                             </div>
-                        </div>
+                        </div> -->
 
                         <!--==================== PROJECT 7 ====================-->
                         <div class="projects__content swiper-slide">
@@ -459,6 +463,7 @@
                     </div>
                     
                     <div class="contact__content">
+                        <h3 class="contact__title">Form not working...<br>Some tecnical issues in EmailJS library</h3>
                         <h3 class="contact__title">
                             <i class="ri-send-plane-line"></i>Tell me about yourself
                         </h3>
