--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                         </div>
                     </div>
                     
-                    <div class="contact__content">
+<!--                     <div class="contact__content">
                         <h3 class="contact__title">Form not working...<br>Some tecnical issues in EmailJS library</h3>
                         <h3 class="contact__title">
                             <i class="ri-send-plane-line"></i>Tell me about yourself
@@ -490,7 +490,7 @@
                                 Submit<i class="ri-arrow-right-up-line"></i>
                             </button>
                         </form>
-                    </div>
+                    </div> -->
                 </div>
             </section>
         </main>
