--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                     <div class="swiper-wrapper">
                         <!--==================== PROJECT 1 ====================-->
                         <div class="projects__content swiper-slide">
-                            <img src="assets/img/c.png" alt="projects image" class="projects__img">
+                            <img src="assets/img/A4.png" alt="E-commerce Website image" class="projects__img">
 
                             <div>
                                 <span class="projects__subtitle">Front-End</span>
@@ -306,7 +306,7 @@
 
                         <!--==================== PROJECT 2 ====================-->
                         <div class="projects__content swiper-slide">
-                            <img src="assets/img/Untitled.3.png" alt="projects image" class="projects__img">
+                            <img src="assets/img/C4.png" alt="React Calculator image" class="projects__img">
 
                             <div>
                                 <span class="projects__subtitle">Front-End</span>
@@ -324,7 +324,7 @@
 
                         <!--==================== PROJECT 3 ====================-->
                         <div class="projects__content swiper-slide">
-                            <img src="assets/img/a.png" alt="projects image" class="projects__img">
+                            <img src="assets/img/D4.png" alt="Notekeeper image" class="projects__img">
 
                             <div>
                                 <span class="projects__subtitle">Front-End</span>
@@ -342,7 +342,7 @@
 
                         <!--==================== PROJECT 4 ====================-->
                         <div class="projects__content swiper-slide">
-                            <img src="assets/img/Untitled.4.png" alt="projects image" class="projects__img">
+                            <img src="assets/img/E4.png" alt="Wordscramble Game image" class="projects__img">
 
                             <div>
                                 <span class="projects__subtitle">Front-End</span>
@@ -360,7 +360,7 @@
 
                         <!--==================== PROJECT 5 ====================-->
                         <div class="projects__content swiper-slide">
-                            <img src="assets/img/Untitled.5.png" alt="projects image" class="projects__img">
+                            <img src="assets/img/B3.png" alt="Portfolio Website image" class="projects__img">
 
                             <div>
                                 <span class="projects__subtitle">Front-End</span>
@@ -396,7 +396,7 @@
 
                         <!--==================== PROJECT 7 ====================-->
                         <div class="projects__content swiper-slide">
-                            <img src="assets/img/Untitled.6.png" alt="projects image" class="projects__img">
+                            <img src="assets/img/F4.png" alt="Countdown Timer image" class="projects__img">
                             <div>
                                 <span class="projects__subtitle">Front-End</span>
                                 <h1 class="projects__title">Countdown Timer</h1>
