--- a/index.html
+++ b/index.html
@@ -440,6 +440,10 @@
                             <div class="contact__data">
                                 <span class="contact__data-title">Email</span>
                                 <span class="contact__data-info">spanigrahi.gmjc@gmail.com</span>
+
+                                <a href="mailto: spanigrahi.gmjc@gmail.com" target="_blank" class="contact__button">
+                                    Email me <i class="ri-arrow-right-line"></i>
+                                </a>
                             </div>
                             
                             <div class="contact__data">
